--- a/src/frontend/components/App.css
+++ b/src/frontend/components/App.css
@@ -8,11 +8,18 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+.mus-logo {
+  height: 40vmin;
+  pointer-events: none;
+  /* margin-left: 30px; */
+  float: left;
+}
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 7s linear;
   }
-}
+} */
 
 .App-header {
   background-color: blue;
